MDEV-8773: InnoDB innochecksum does not work with encrypted or page compressed tables